// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty options 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}

.t-icon-arrow-up:before {
  content: 'e65f';
}

.t-icon-invitation:before {
  content: 'e6d6';
}

.t-icon-like-o:before {
  content: 'e6d7';
}

#someId {
  color: red;
}
"
`;

exports[`exclude 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}

.t-icon-arrow-up:before {
  content: 'e65f';
}

#someId {
  color: red;
}
"
`;

exports[`file is regexp 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}

.t-icon-arrow-up:before {
  content: 'e65f';
}

#someId {
  color: red;
}
"
`;

exports[`file not matched - should not modify css 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}

.t-icon-arrow-up:before {
  content: 'e65f';
}

.t-icon-invitation:before {
  content: 'e6d6';
}

.t-icon-like-o:before {
  content: 'e6d7';
}

#someId {
  color: red;
}
"
`;

exports[`include & exclude 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}

.t-icon-arrow-up:before {
  content: 'e65f';
}

#someId {
  color: red;
}
"
`;

exports[`include 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}

.t-icon-arrow-up:before {
  content: 'e65f';
}

#someId {
  color: red;
}
"
`;

exports[`no selectorPattern - should not remove non-icon rules 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}
"
`;

exports[`postcss7 fallback - should work with postcss.plugin style 1`] = `
"
.t-icon-arrow-down:before {
  content: 'e65e';
}

.t-icon-arrow-up:before {
  content: 'e65f';
}

#someId {
  color: red;
}
"
`;
